<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:title="@string/search_title"
          android:icon="@drawable/baseline_search_24"
          app:showAsAction="always" app:actionViewClass="android.widget.SearchView"/>
    <item android:id="@+id/order"
          android:title="@string/sort_title"
          android:icon="@drawable/baseline_sort_24"
          app:showAsAction="always">
        <menu>
            <group android:id="@+id/sortGroup">
                <item android:id="@+id/sort_price" android:title="@string/price"/>
                <item android:id="@+id/sort_genre" android:title="@string/genre"/>
                <item android:id="@+id/sort_length" android:title="@string/song_length"/>
            </group>
        </menu>
    </item>
</menu>